# gps-modulator

./: .gitignore  README.md  REAL_TIME_GUIDE.md  main.py  pyproject.toml  requirements-realtime.txt  requirements.txt
examples/: README.md  diagnostic.py  imu_integration_demo.py  real_time_demo.py  simple_demo.py  static_demo.py  test_visualization.py  windows_demo.py
gps_modulator/core/: detection_pipeline.py  geosignal_validation_engine.py
gps_modulator/detectors/: velocity_anomaly.py
gps_modulator/fallback/: dead_reckoner.py  fallback_manager.py
gps_modulator/utils/: gps_math.py
src/gps_modulator/: __init__.py  cli.py
src/gps_modulator/correction/: __init__.py  dead_reckoner.py  imu_handler.py  path_corrector.py
src/gps_modulator/detectors/: __init__.py  velocity_anomaly_detector.py
src/gps_modulator/streaming/: __init__.py  gps_reader.py  imu_streamer.py  real_time_sources.py
src/gps_modulator/utils/: __init__.py  gps_math.py
src/gps_spoofing_detector/: __init__.py  cli.py
src/gps_spoofing_detector/correction/: path_corrector.py
src/gps_spoofing_detector/streaming/: __init__.py  data_generators.py
src/gps_spoofing_detector/visualization/: __init__.py  live_plotter.py
tests/: __init__.py  test_dead_reckoner.py  test_detectors.py  test_fallback_manager.py  test_geosignal_validator.py  test_imu_integration.py  test_pipeline_visual.py  test_utils.py  test_velocity_anomaly.py
visualize/: path_plotter.py  run_visual_demo.py
